@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.263 2005/10/13 00:23:53 rillig Exp $
+# $NetBSD: Makefile,v 1.264 2005/10/14 00:05:23 rillig Exp $
 #
 
-DISTNAME=	pkglint-4.28
+DISTNAME=	pkglint-4.28.1
 CATEGORIES=	pkgtools devel
 MASTER_SITES=	# empty
 DISTFILES=	# empty
