@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11473 2005/10/14 01:08:27 minskim Exp $
+$NetBSD: CHANGES,v 1.11474 2005/10/14 08:37:16 adrianp Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4576,3 +4576,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Added security/dirb version 1.8 [minskim 2005-10-14]
 	Added security/secpanel version 0.5.1 [minskim 2005-10-14]
 	Updated mail/sendmail to 8.13.5 [adrianp 2005-10-14]
+	Updated pkgtools/pkglint to 4.28.1 [rillig 2005-10-14]
